syntax = "proto3";

import "user.proto";

// 生成的代码包名
package pb;

option go_package = "github.com/borntodie-new/backend-master-class/pb";

message UpdateUserRequest{
  optional string full_name = 1;
  optional string email = 2;
  optional string password = 3;
  string username = 4;
}

message UpdateUserResponse{
  User user = 1;
}