syntax = "proto3";

// 引入外界定义的类型
import "timestamp.proto";


// 生成的代码包名
package pb;

option go_package = "github.com/borntodie-new/backend-master-class/pb";

message User{
  string username = 1;
  string full_name = 2;
  string email = 3;
  Timestamp password_changed_at = 4;
  Timestamp created_at = 5;
}